src/App.css
.cursor-cross-point{
  cursor:url('../public/cross-point.png') 11 11 ,auto;
}
.cursor-cross-polygon{
  cursor:url('../public/cross-polygon.png') 11 11 ,auto;
}
.cursor-cross-line{
  cursor:url('../public/cross-line.png') 11 11 ,auto;
}
.cursor-cross-vector{
  cursor:url('../public/cross-vector.png') 11 11 ,auto;
}
.cursor-arrow-trash{
  cursor:url('../public/arrow-trash.png') ,auto;
}
/* .cursor-zoom-in{
  cursor:zoom-in;
}
.cursor-zoom-out{
  cursor:zoom-out;
} */
.info{
  background-color: rgba(0, 0, 0, 0.389);
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 9999;
  display: flex;
  justify-content: center;
  align-items: center;
}
.info-box{
  background-color: white;
  padding: 10px;
  border-radius: 10px;
  width:min(600px, 100%);  
}
.info-inner-box{
  padding: 10px;
  padding-top: 2px;
  border-radius: 10px;
  max-height: 80vh;
  overflow-y: auto;
  width:min(600px, 100%);  

}
.help{
  background-color: rgba(0, 0, 0, 0.861);
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  z-index: 9999;
  overflow: auto;
}
.help-glow{
  filter: drop-shadow(0 0 20px white) drop-shadow(0 0 10px white);
}
.help-glow-box{
  border:2px solid white;
  border-radius: 20px;
  overflow-y: auto;
}
.help-center{
  display: flex;
  justify-content: center;
  align-items: center;
}
.crossed{
  position: relative;
}
.crossed::before{
  content: "";
    position: absolute;
    top: 50%;
    left: 0;
    width: 100%;
    height: 1px;
    background-color: #fff;
    transform: translateY(-50%) rotate(-45deg);
    z-index: 1;
}
.text-outline{
  text-shadow: -1px -1px 0 #ffffff, 1px -1px 0 #ffffff, -1px 1px 0 #ffffff, 1px 1px 0 #ffffff;
}
.vector{
  display: inline-flex;
  flex-direction: column;
  border: 3px solid transparent;
  border-image: url(vector-border.png) 30 stretch;
}

